# mcp_chat

./: .dockerignore  .env  .env.example  .gitignore  Makefile  README.md  app.py  docker-compose.yml  iphone_cost_analysis.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  response_data.json
backend/: Dockerfile  app.py  database.py  llm_chat.py  main.py  models.py  requirements.txt
backend/chat_room/: chat_user.py  room_chat.py
backend/db/: chat_room.py  conn.py  user.py
backend/llm_user/: llm_user.py  mcp_user.py
backend/model/: base.py  model.py
backend/routes/: auth.py  chat.py  llm_user.py  mcp.py  util.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: config.js
frontend/src/components/: ChatRoom.vue  ChatRoomList.vue  ServerManager.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/utils/: http-client.js
frontend/src/views/: ChatView.vue  Home.vue  LoginView.vue  RegisterView.vue  ServerManagerView.vue
mcp_servers/: dev.py  twitter.py
src/: App.vue  server.js  testClient.js
src/components/: HelloWorld.vue  ServerManager.vue  mcp.vue
src/utils/: testSSE.js
tests/: issue.py  test_mcp_server.py
