[project]
name = "mcp-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "anthropic>=0.49.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-core>=0.3.51",
    "mcp>=1.6.0",
    "mongoengine>=0.29.1",
    "motor>=3.7.0",
    "openai>=1.72.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
]

